packages/cli/tests/fixtures/errors/misconfigured/label/types.ts
import type { VariantProps } from "jade-garden";
import type { labelStyles } from ".";

export type Variants = VariantProps<typeof labelStyles>;
